# prj-prompthon-1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
resource/: location.csv  result.csv
src/: __init__.py  streamlit.py
src/data-generator/: generate.py
src/utils/: chatlib.py  chatmessagelib.py  vectorstore_utils.py
